<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Meter</string>

  <string name="meter_intro">This is Meter.\n\nMeter\'s various meters (tap the options menu) are usually intended to be called from a remote activity in an ESM app like Ohmage.\n\nMeter is a project by Phil Adams (philadams.net) and the Interaction Design Lab (idl.cornell.edu).\n\nDrawn faces image files from: Champion GD, von Baeyer CL, Trieu JD, Goodenough B. Sydney Animated Facial Expressions (SAFE). Electronic resource. Copyright ©1997, Pain Research Unit, Sydney Children\'s Hospital, Randwick, NSW, Australia. All rights reserved. Used with permission.</string>
  <string name="action_meter_one">MeterOne</string>
  <string name="action_meter_two">MeterTwo</string>
  <string name="action_vas">VAS</string>
  <string name="action_nrs">NRS</string>
  <string name="action_suureta">Suureta</string>
  <string name="action_super_vas">SuperVAS</string>
  <string name="action_super_vas_plus">SuperVAS+</string>
  <string name="action_pam">PAM</string>
  <string name="action_many_fingers">ManyFingers</string>
  <string name="action_tap_tap">TapTap</string>
  <string name="action_number_picker_plus">NumberPickerPlus</string>
  <string name="action_safe">SAFE</string>
  <string name="action_photos_people">PhotosPeople</string>
  <string name="action_photos_landscape">PhotosLandscape</string>
  <string name="action_supervas_numbered">SuperVASNumbered</string>
  <string name="action_safe_slider">SafeSlider</string>
  <string name="action_notification_vrs">NotifyVRS</string>
  <string name="action_notification_nrs">NotifyNRS</string>

  <string name="button_submit_response">Submit</string>

  <string name="slide_ten_prompt">Please indicate your current pain level from 0 (no pain) to 10 (worst pain imaginable) using the following slider:</string>

  <string name="vas_prompt">Please indicate your current pain level</string>
  <string name="vas_anchor_low">No pain at all</string>
  <string name="vas_anchor_high">Worst pain imaginable</string>

  <string name="nrs_prompt">Please indicate your current pain level with the following NRS:</string>

  <string name="suureta_prompt">Please touch-and-hold the screen to report your current pain level from empty circle (no pain) to the full circle (worst pain possible):</string>

  <string name="super_vas_prompt">Please indicate your current pain level with the following seek bar:</string>

  <string name="super_vas_plus_prompt">Please indicate your current pain level by moving this bar:</string>

  <string name="pam_prompt">Please tap on the image that best represents your current pain level:</string>
  <string name="pam_more_images">More images</string>

  <string name="many_fingers_prompt">Please touch the screen with 1 to 5 fingers to report your current pain intensity level (5 = worst pain possible):</string>

  <string name="tap_tap_prompt">Please report your current pain level (0 = no pain, 10 = worst pain possible) by tapping the screen.</string>

  <string name="number_picker_plus_prompt">Please report your current pain level (0 = no pain, 10 = worst pain possible) by tapping "+" or "-" on the screen.</string>

  <string name="safe_prompt">Please tap or swipe up/down to change the face such that it best represents your current pain level.</string>

  <string name="notify_action_no_pain">No pain</string>
  <string name="notify_action_some_pain">Some pain</string>
  <string name="notify_action_much_pain">Much pain</string>

  <string name="title_activity_default">Meter meter</string>
  <string name="hello_world">Hello world!</string>
  <string name="title_activity_meter">Meter</string>

</resources>
