<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.cornell.idl.meter.MeterActivity">
  <item
      android:id="@+id/action_supervas_numbered"
      android:title="@string/action_supervas_numbered"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_safe_slider"
      android:title="@string/action_safe_slider"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_number_picker_plus"
      android:title="@string/action_number_picker_plus"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_vas"
      android:title="@string/action_vas"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_nrs"
      android:title="@string/action_nrs"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_suureta"
      android:title="@string/action_suureta"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_super_vas"
      android:title="@string/action_super_vas"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_super_vas_plus"
      android:title="@string/action_super_vas_plus"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <!--<item
      android:id="@+id/action_pam"
      android:title="@string/action_pam"
      android:orderInCategory="100"
      android:showAsAction="never" />-->
  <item
      android:id="@+id/action_many_fingers"
      android:title="@string/action_many_fingers"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_tap_tap"
      android:title="@string/action_tap_tap"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_safe"
      android:title="@string/action_safe"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_photos_people"
      android:title="@string/action_photos_people"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_photos_landscape"
      android:title="@string/action_photos_landscape"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_meter_one"
      android:title="@string/action_meter_one"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_meter_two"
      android:title="@string/action_meter_two"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_notification_vrs"
      android:title="@string/action_notification_vrs"
      android:orderInCategory="100"
      android:showAsAction="never" />
  <item
      android:id="@+id/action_notification_nrs"
      android:title="@string/action_notification_nrs"
      android:orderInCategory="100"
      android:showAsAction="never" />
</menu>
