<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cornell.idl.meter.VAS">

  <TextView
      android:text="@string/vas_prompt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"/>

  <TextView
      android:text="@string/vas_anchor_high"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_gravity="center">

    <edu.cornell.idl.meter.VerticalSeekBar
        android:id="@+id/verticalseekbar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:progress="50"
        android:layout_centerInParent="true"/>

  </RelativeLayout>

  <TextView
      android:text="@string/vas_anchor_low"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"/>

  <Button
      android:id="@+id/vas_button_submit"
      android:text="@string/button_submit_response"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"/>

</LinearLayout>
