<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cornell.idl.meter.SuperVASActivity">

  <TextView
      android:text="@string/super_vas_prompt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="italic"/>

  <TextView
      android:text="@string/vas_anchor_high"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/activity_horizontal_margin"/>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

    <edu.cornell.idl.meter.SuperVASView
        android:id="@+id/super_vas_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        custom:progress="50"/>

  </RelativeLayout>

  <TextView
      android:text="@string/vas_anchor_low"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

  <Button
      android:id="@+id/super_vas_button_submit"
      android:text="@string/button_submit_response"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"/>

</LinearLayout>
