<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cornell.idl.meter.PAMActivity">

  <TextView
      android:text="@string/pam_prompt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="italic"/>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

    <GridView
        android:id="@+id/pam_grid_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="4"
        android:layout_centerInParent="true"
        >
    </GridView>

    <Button
        android:id="@+id/pam_more_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pam_more_images"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/pam_grid_view" />

  </RelativeLayout>

  <Button
      android:id="@+id/submit_button"
      android:text="@string/button_submit_response"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"/>

</LinearLayout>
