<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cornell.idl.meter.PhotosPeopleActivity">

  <TextView
      android:text="@string/pam_prompt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="italic"/>

  <TextView
      android:text="@string/vas_anchor_high"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/activity_horizontal_margin"/>

  <RelativeLayout
      android:id="@+id/photos"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

    <ImageView
        android:id="@+id/people5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/people5"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:id="@+id/people4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/people4"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/people5"/>
    <ImageView
        android:id="@+id/people3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/people3"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/people4"/>
    <ImageView
        android:id="@+id/people2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/people2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/people3"/>
    <ImageView
        android:id="@+id/people1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/people1"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/people2"/>

  </RelativeLayout>

  <TextView
      android:text="@string/vas_anchor_low"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

  <Button
      android:id="@+id/submit_button"
      android:text="@string/button_submit_response"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"/>

</LinearLayout>
