<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cornell.idl.meter.NRS">

  <TextView
      android:id="@+id/nrs_directions"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="top"
      android:textStyle="italic"
      android:text="@string/nrs_prompt"/>

  <TextView
      android:text="@string/vas_anchor_high"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/activity_horizontal_margin"/>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_gravity="center">

    <RadioGroup
        android:id="@+id/nrs_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
      <RadioButton
          android:id="@+id/nrs_11"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="11"/>
      <RadioButton
          android:id="@+id/nrs_10"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="10"/>
      <RadioButton
          android:id="@+id/nrs_9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="9"/>
      <RadioButton
          android:id="@+id/nrs_8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="8"/>
      <RadioButton
          android:id="@+id/nrs_7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="7"/>
      <RadioButton
          android:id="@+id/nrs_6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="6"/>
      <RadioButton
          android:id="@+id/nrs_5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="5"/>
      <RadioButton
          android:id="@+id/nrs_4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="4"/>
      <RadioButton
          android:id="@+id/nrs_3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="3"/>
      <RadioButton
          android:id="@+id/nrs_2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="2"/>
      <RadioButton
          android:id="@+id/nrs_1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="1"/>
      <RadioButton
          android:id="@+id/nrs_0"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="0"/>
    </RadioGroup>

  </RelativeLayout>

  <TextView
      android:text="@string/vas_anchor_low"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

  <Button
      android:id="@+id/nrs_button_submit"
      android:text="@string/button_submit_response"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"/>

</LinearLayout>
